<resources>
    <string name="app_name">CC</string>
    <string name="avatar">AVATAR</string>
    <string name="shop">SHOP</string>
    <string name="qr">QR</string>
    <string name="friends">FRIENDS</string>
    <string name="settings">SETTINGS</string>
    <string name="leaderboard">RANK</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="view_friends">View Friends</string>
    <string name="username">Username</string>
    <string name="profile">PROFILE</string>
    <string name="discounts">DISCOUNTS</string>
    <string name="all_avatars">All Avatars</string>
    <string name="set_as_avatar">Set as Avatar</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="search">Search</string>
    <string name="you_unlocked">You unlocked:</string>
    <string name="leaves">Leaves</string>
    <string name="co2_saved">CO2 Saved:</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_received_leaves">You received leaves</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="clear">Clear</string>
    <string name="language">Language</string>
    <string name="switch_to_chinese">Switch to Chinese</string>
    <string name="switch_to_english">Switch to English</string>
    <string name="login_as_new_user">Login as New User</string>
    <string name="login">Login</string>
    <string name="reward">Reward</string>
    <string name="rank">Rank</string>
    <string name="city">City</string>
    <string name="local">Local</string>
    <string name="cities">Cities</string>
    <string name="avatars">Avatars</string>
    <string name="preference_file_key">com.cchapy.cc.USER_DATA</string>
    <string name="saved_user_id">saved_user_id</string>
    <string name="city_name">City Name</string>
    <string name="total_users">Total Users</string>
    <string name="total_points">Total Points</string>
    <string name="Stars_Label">Stars:</string>
    <string name="location">Location:</string>
    <string name="expires">Expires</string>
    <string name="owned">Already owned</string>
    <string name="insufficient_funds">Insufficient Leaves</string>
    <string name="Buy">Buy</string>
    <string name="purchase_successful">Purchase successful</string>
    <string name="qrPrompt">Scan a CC QR code for Leaves and Avatars</string>
    <string name="Avatar_Updated">Avatar Updated</string>
    <string name="Login_Prompt">Login in Settings</string>
    <string name="reset_database">Reset Database</string>
    <string name="reset">Reset</string>
    <string name="logout">Logout</string>
    <string name="log_out_user">Log Out User</string>
    <string name="Beijing">Beijing</string>
    <string name="Dalian">Dalian</string>
    <string name="Shanghai">Shanghai</string>
    <string name="login_success">Login Successful</string>
    <string name="login_fail">Login Failed</string>
    <string name="user_login">User Login</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_QR">Invalid QR Code</string>
    <string name="cancelled">Cancelled</string>
    <string name="you_received">You received</string>
    <string name="avatar_already_owned">Avatar already owned</string>
    <string name="total_leaves">Total Leaves</string>

    <string-array name="sorting_options_vouchers">
        <item>NEW</item>
        <item>A-Z</item>
        <item>TIME</item>
        <item>PRICE</item>
    </string-array>

    <string-array name="sorting_options_avatars">
        <item>NEW</item>
        <item>A-Z</item>
        <item>STARS</item>
        <item>PRICE</item>
    </string-array>
</resources>
