<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dots_pink"
    android:orientation="vertical"
    tools:context="cchapy.cc.DiscountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:background="#FFFFFF">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/sorting_options_vouchers" />

        <ToggleButton
            android:id="@+id/toggleButton3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.46"
            android:text="ToggleButton"
            android:textOff="@string/asc"
            android:textOn="@string/desc" />

        <EditText
            android:id="@+id/Discount_Search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/search"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/discount_inventory_contents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"></LinearLayout>
</LinearLayout>
