<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/leaderboardContainer"
    tools:context="cchapy.cc.LeaderboardActivity">

    <TabHost
        android:id="@+id/leaderboardTabHost"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_lime_green">

                <LinearLayout
                    android:id="@+id/friendsLeaderboardTab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/cardview_light_background"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <TextView
                            android:id="@+id/rankLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_weight="0.6"
                            android:text="@string/rank"
                            android:textAppearance="?attr/textAppearanceListItem"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/friendUsernameLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_weight="1"
                            android:text="@string/username"
                            android:textAppearance="?attr/textAppearanceListItem"
                            android:textSize="14sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/friendCityLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/text_margin"
                            android:layout_weight="0.7"
                            android:text="@string/city"
                            android:textAppearance="?attr/textAppearanceListItem"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            />

                        <TextView
                            android:id="@+id/friendLeavesLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/text_margin"
                            android:layout_weight="0.5"
                            android:text="@string/leaves"
                            android:textAppearance="?attr/textAppearanceListItem"
                            android:textSize="14sp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/friendsLeaderboardRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"></LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/localLeaderboardTab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/cardview_light_background"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <TextView
                            android:id="@+id/rankLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_weight="0.6"
                            android:text="@string/rank"
                            android:textAppearance="?attr/textAppearanceListItem"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/friendUsernameLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_weight="1"
                            android:text="@string/username"
                            android:textAppearance="?attr/textAppearanceListItem"
                            android:textSize="14sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/friendCityLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/text_margin"
                            android:layout_weight="0.7"
                            android:text="@string/city"
                            android:textAppearance="?attr/textAppearanceListItem"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            />

                        <TextView
                            android:id="@+id/friendLeavesLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/text_margin"
                            android:layout_weight="0.5"
                            android:text="@string/leaves"
                            android:textAppearance="?attr/textAppearanceListItem"
                            android:textSize="14sp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/localLeaderboardRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"></LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/citiesLeaderboardTab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/cardview_light_background"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <TextView
                            android:id="@+id/rankLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_weight="0.6"
                            android:text="@string/rank"
                            android:textAppearance="?attr/textAppearanceListItem"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/citynameLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text_margin"
                            android:layout_weight="1"
                            android:text="@string/city_name"
                            android:textAppearance="?attr/textAppearanceListItem"
                            android:textSize="14sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/totalUsersLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/text_margin"
                            android:layout_weight="0.4"
                            android:text="@string/total_users"
                            android:textAppearance="?attr/textAppearanceListItem"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            />

                        <TextView
                            android:id="@+id/totalPointsLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/text_margin"
                            android:layout_weight="0.5"
                            android:text="@string/total_points"
                            android:textAppearance="?attr/textAppearanceListItem"
                            android:textSize="14sp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cityLeaderboardRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"></LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</android.support.constraint.ConstraintLayout>
