<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_clouds_purple"
    tools:context="cchapy.cc.DisplayProfileActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="25dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="25dp" />

    <ImageView
        android:id="@+id/Image_Avatar"
        android:layout_width="169dp"
        android:layout_height="284dp"
        android:src="@drawable/character_girl_generic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="216dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Image_Avatar">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.29"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.29"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/usernameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.29"
                    android:paddingTop="8dp"
                    android:text="@string/Login_Prompt"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cityText"
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:layout_weight="0.29"
                    android:text="@string/city"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    tools:layout_editor_absoluteX="90dp"
                    tools:layout_editor_absoluteY="367dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.29"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/friendIcon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:adjustViewBounds="false"
                        android:cropToPadding="false"
                        android:scaleType="fitStart"
                        app:srcCompat="@drawable/icon_leaderboard_friend"
                        tools:layout_editor_absoluteX="90dp"
                        tools:layout_editor_absoluteY="394dp" />

                    <TextView
                        android:id="@+id/friendcountText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:text="0" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.29"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/leavesLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_leaves"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteX="90dp"
                        tools:layout_editor_absoluteY="430dp" />

                    <TextView
                        android:id="@+id/leavecountText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:text="0"
                        app:layout_constraintLeft_toRightOf="@+id/leavesLabel"
                        tools:layout_editor_absoluteY="425dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.29"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/co2Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/co2_saved"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteX="90dp"
                        tools:layout_editor_absoluteY="463dp" />

                    <TextView
                        android:id="@+id/co2Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:text="0"
                        app:layout_constraintLeft_toRightOf="@+id/friendIcon"
                        tools:layout_editor_absoluteY="394dp" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
